@@ -24,6 +24,7 @@ namespace Castle.MonoRail.Framework
 	using Castle.Core.Logging;
 	using Castle.MonoRail.Framework.Helpers;
 	using Castle.MonoRail.Framework.Internal;
+	using Castle.MonoRail.Framework.Services.Utils;
 
 	/// <summary>
 	/// Default implementation of <see cref="IControllerLifecycleExecutor"/>
@@ -44,6 +45,8 @@ namespace Castle.MonoRail.Framework
 		private ControllerMetaDescriptor metaDescriptor;
 		private IServiceProvider serviceProvider;
 		private ILogger logger = NullLogger.Instance;
+
+		private IServiceProvider provider;
 
 		/// <summary>
 		/// The reference to the <see cref="IViewEngineManager"/> instance
@@ -99,6 +102,7 @@ namespace Castle.MonoRail.Framework
 		/// <param name="provider">The service proviver</param>
 		public void Service(IServiceProvider provider)
 		{
+			this.provider = provider;
 			viewEngineManager = (IViewEngineManager) provider.GetService(typeof(IViewEngineManager));
 			filterFactory = (IFilterFactory) provider.GetService(typeof(IFilterFactory));
 			resourceFactory = (IResourceFactory) provider.GetService(typeof(IResourceFactory));
@@ -939,8 +943,32 @@ namespace Castle.MonoRail.Framework
 
 			try
 			{
-				controller._selectedViewName = Path.Combine("rescues", att.ViewName);
-				ProcessView();
+				if (att.RescueController != null)
+				{
+					Controller rescueController = (Controller) Activator.CreateInstance(att.RescueController);
+
+					using(ControllerLifecycleExecutor rescueExecutor = new ControllerLifecycleExecutor(rescueController, context))
+					{
+						rescueExecutor.Service(provider);
+						ControllerDescriptor rescueDescriptor = ControllerInspectionUtil.Inspect(att.RescueController);
+						rescueExecutor.InitializeController(rescueDescriptor.Area, rescueDescriptor.Name, att.RescueMethod.Name);
+						rescueExecutor.SelectAction(att.RescueMethod.Name, rescueDescriptor.Name);
+
+						IDictionary args = new Hashtable();
+						IDictionary propertyBag = rescueController.PropertyBag;
+						args["exception"] = propertyBag["exception"] = ex;
+						args["controller"] = propertyBag["controller"] = controller;
+						args["method"] = propertyBag["method"] = method;
+
+						rescueExecutor.ProcessSelectedAction(args);
+					}
+				}
+				else
+				{
+					controller._selectedViewName = Path.Combine("rescues", att.ViewName);
+					ProcessView();
+				}
+
 				return true;
 			}
 			catch(Exception exception)
