@@ -1,0 +1,33 @@
+// Copyright 2004-2006 Castle Project - http://www.castleproject.org/
+// 
+// Licensed under the Apache License, Version 2.0 (the "License");
+// you may not use this file except in compliance with the License.
+// You may obtain a copy of the License at
+// 
+//     http://www.apache.org/licenses/LICENSE-2.0
+// 
+// Unless required by applicable law or agreed to in writing, software
+// distributed under the License is distributed on an "AS IS" BASIS,
+// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+// See the License for the specific language governing permissions and
+// limitations under the License.
+
+namespace Castle.MonoRail.Framework
+{
+	using System;
+	using System.Reflection;
+
+	/// <summary>
+	/// Contract that Rescue Controllers must satisfy
+	/// </summary>
+	public interface IRescueController
+	{
+		/// <summary>
+		/// Run the rescue for the exception, controller and method
+		/// </summary>
+		/// <param name="exception">Exception thrown</param>
+		/// <param name="controller">Controller where the exception happened</param>
+		/// <param name="method">The method that the controller happened on</param>
+		void Rescue(Exception exception, Controller controller, MethodInfo method);
+	}
+}
