@@ -1,6 +1,9 @@
 1.0
 ===
 
+- Applied Nick Hemsley's patch adding support for rescue controllers (MR-332)
+  "add RescueController to RescueAttribute"
+
 - Applied suggestion by Daniel D to fix MR-329
   "Impossible to Context.Response.Redirect to any controller in empty Area from controller placed in some Area."
 
